--- a/hommad.cabal
+++ b/hommad.cabal
@@ -16,9 +16,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:
+  exposed-modules:     HomMad
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.6 && <4.7
-  -- hs-source-dirs:
+  hs-source-dirs:      src
   default-language:    Haskell2010
