--- a/hommad.cabal
+++ b/hommad.cabal
@@ -19,6 +19,6 @@ library
   exposed-modules:     HomMad
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6 && <4.7, containers
   hs-source-dirs:      src
   default-language:    Haskell2010
