--- a/hommad.cabal
+++ b/hommad.cabal
@@ -22,3 +22,17 @@ library
   build-depends:       base >=4.6 && <4.7, containers
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:          -Wall
+
+test-suite spec
+  type:                 exitcode-stdio-1.0
+  default-language:     Haskell2010
+  hs-source-dirs:       test
+  ghc-options:          -Wall
+  main-is:              Spec.hs
+  -- other-modules:        HomMadSpec
+  build-depends:        base
+                      , hspec >= 1.3
+                      , QuickCheck
+                      , hommad
+                      , containers
