--- a/hommad.cabal
+++ b/hommad.cabal
@@ -16,7 +16,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     HomMad
+  exposed-modules:     HomMad.Goban
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.6 && <4.7, containers
