--- a/hommad.cabal
+++ b/hommad.cabal
@@ -16,10 +16,10 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     HomMad.Goban
+  exposed-modules:     HomMad.Goban, HomMad.AI
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.6 && <4.7, containers
+  build-depends:       base >=4.6 && <4.7, containers, random
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:          -Wall
