--- a/hommad.cabal
+++ b/hommad.cabal
@@ -36,3 +36,13 @@ test-suite spec
                       , QuickCheck
                       , hommad
                       , containers
+
+benchmark bench-playout
+  type:                 exitcode-stdio-1.0
+  default-language:     Haskell2010
+  hs-source-dirs:       bench
+  ghc-options:          -Wall
+  main-is:              bench-playout.hs
+  build-depends:        base
+                      , time
+                      , hommad
