--- a/hommad.cabal
+++ b/hommad.cabal
@@ -23,6 +23,7 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -O2
+  ghc-prof-options:    -prof -auto-all
 
 test-suite spec
   type:                 exitcode-stdio-1.0
@@ -42,6 +43,7 @@ benchmark bench-playout
   default-language:     Haskell2010
   hs-source-dirs:       bench
   ghc-options:          -Wall -O2
+  ghc-prof-options:     -prof -auto-all
   main-is:              bench-playout.hs
   build-depends:        base
                       , time
