--- a/hommad.cabal
+++ b/hommad.cabal
@@ -48,3 +48,14 @@ benchmark bench-playout
   build-depends:        base
                       , time
                       , hommad
+
+benchmark bench-move
+  type:                 exitcode-stdio-1.0
+  default-language:     Haskell2010
+  hs-source-dirs:       bench
+  ghc-options:          -Wall -O2
+  ghc-prof-options:     -prof -auto-all
+  main-is:              bench-move.hs
+  build-depends:        base
+                      , time
+                      , hommad
