--- a/hommad.cabal
+++ b/hommad.cabal
@@ -19,7 +19,7 @@ library
   exposed-modules:     HomMad.Goban, HomMad.AI
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.6 && <4.7, containers, random
+  build-depends:       base >=4.6, containers, random
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -O2
